--- a/index.html
+++ b/index.html
@@ -4,39 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Delivery Food</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="header-box">
-                <div class="header-logo logo">
-                    <img src="./images/logo.png" alt="logo">
+    <div class="app-wrapper">
+        <header class="header">
+            <div class="container">
+                <div class="header-box">
+                    <div class="header-logo logo">
+                        <img src="./images/logo.png" alt="logo">
+                    </div>
+                    <div class="header-controls">
+                        <button class="btn btn-primary">
+                            <img src="./images/icons/user.png" alt="user">
+                            Войти
+                        </button>
+                        <button class="btn btn-outline">
+                            <img src="./images/icons/shopping-cart.png" alt="shopping-cart">
+                            Корзина
+                        </button>
+                    </div>
                 </div>
-                <div class="header-controls">controls</div>
             </div>
-        </div>
-    </header>
-
-    <main class="main">
-        <div class="container">
-            container
-        </div>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-box">
-                <div class="footer-logo logo">
-                    <img src="./images/logo.png" alt="logo">
+        </header>
+        <main class="main">
+            <section class="banner">
+                <div class="container">
+                    <div class="banner-item">
+                        <h1 class="banner-item--title">
+                            Онлайн-сервис <br> доставки еды на дом
+                        </h1>
+                        <p class="banner-item--subtitle">
+                            Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком
+                        </p>
+                    </div>
                 </div>
-                <div class="footer-nav">2</div>
-                <div class="footer-social">3</div>
+            </section>
+            <section class="products">
+                <div class="container">
+                    <div class="products-header">
+                        <h3 class="products-header--title">
+                            Рестораны
+                        </h3>
+                        <input type="text" class="products-header--search" placeholder="Поиск блюд и ресторанов">
+                    </div>
+
+                </div>
+            </section>
+        </main>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-box">
+                    <div class="footer-logo logo">
+                        <img src="./images/logo.png" alt="logo">
+                    </div>
+                    <div class="footer-nav">
+                        <ul>
+                            <li>Ресторанам</li>
+                            <li>Курьерам</li>
+                            <li>Пресс-центр</li>
+                            <li>Контакты</li>
+                        </ul>
+                    </div>
+                    <div class="footer-social">
+                        <img src="./images/socials/INST.png" alt="INST">
+                        <img src="./images/socials/FB.png" alt="FB">
+                        <img src="./images/socials/VK.png" alt="VK">
+                    </div>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 
 </html>
