--- a/index.html
+++ b/index.html
@@ -54,6 +54,158 @@
                         </h3>
                         <input type="text" class="products-header--search" placeholder="Поиск блюд и ресторанов">
                     </div>
+                    <div class="products-wrapper">
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/rests/rests-1.jpg" alt="rests-1">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Пицца плюс</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description--rating">
+                                            <img src="./images/icons/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/rests/rests-2.jpg" alt="rests-2">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Тануки</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description--rating">
+                                            <img src="./images/icons/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/rests/rests-3.jpg" alt="rests-3">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">FoodBand</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description--rating">
+                                            <img src="./images/icons/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/rests/rests-4.jpg" alt="rests-4">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Жадина-пицца</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description--rating">
+                                            <img src="./images/icons/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/rests/rests-5.jpg" alt="rests-5">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">Точка еды</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description--rating">
+                                            <img src="./images/icons/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="products-card">
+                            <div class="products-card__image">
+                                <img src="./images/rests/rests-6.jpg" alt="rests-6">
+                            </div>
+                            <div class="products-card__description">
+                                <div class="products-card__description-row">
+                                    <h4 class="products-card__description--title">PizzaBurger</h4>
+                                    <div class="products-card__description--bage">50 мин</div>
+                                </div>
+                                <div class="products-card__description-row">
+                                    <div class="products-card__description-info">
+                                        <div class="products-card__description--rating">
+                                            <img src="./images/icons/star.svg" alt="star">
+                                            4.5
+                                        </div>
+                                        <div class="products-card__description--price">
+                                            От 900 ₽
+                                        </div>
+                                        <div class="products-card__description--group">
+                                            Пицца
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </section>
