--- a/goods.html
+++ b/goods.html
@@ -17,9 +17,9 @@
         <header class="header">
             <div class="container">
                 <div class="header-box">
-                    <div class="header-logo logo">
+                    <a href="./index.html" class="header-logo logo">
                         <img src="./images/logo.png" alt="logo">
-                    </div>
+                    </a>
                     <div class="header-controls">
                         <button class="btn btn-primary">
                             <img src="./images/icons/user.png" alt="user">
@@ -69,7 +69,8 @@
                                     <h4 class="products-card__description--name">Калифорния лосось стандарт</h4>
                                 </div>
                                 <div class="products-card__description-row">
-                                    <p class="products-card__description--text">Рис, лосось, авокадо, огурец, майонез, икра масаго, водоросли нори.</p>
+                                    <p class="products-card__description--text">Рис, лосось, авокадо, огурец, майонез,
+                                        икра масаго, водоросли нори.</p>
                                 </div>
                                 <div class="products-card__description-row">
                                     <div class="products-card__description-controls">
@@ -91,7 +92,8 @@
                                     <h4 class="products-card__description--name">Окинава стандарт</h4>
                                 </div>
                                 <div class="products-card__description-row">
-                                    <p class="products-card__description--text"> Рис, креветка отварная, сыр сливочный, лосось, огурец свежий...</p>
+                                    <p class="products-card__description--text"> Рис, креветка отварная, сыр сливочный,
+                                        лосось, огурец свежий...</p>
                                 </div>
                                 <div class="products-card__description-row">
                                     <div class="products-card__description-controls">
@@ -113,7 +115,8 @@
                                     <h4 class="products-card__description--name">Цезарь маки хl</h4>
                                 </div>
                                 <div class="products-card__description-row">
-                                    <p class="products-card__description--text">Рис, куриная грудка копченая, икра масаго, томат, айсберг, соус цезарь...</p>
+                                    <p class="products-card__description--text">Рис, куриная грудка копченая, икра
+                                        масаго, томат, айсберг, соус цезарь...</p>
                                 </div>
                                 <div class="products-card__description-row">
                                     <div class="products-card__description-controls">
@@ -135,7 +138,8 @@
                                     <h4 class="products-card__description--name">Ясай маки стандарт 185 г</h4>
                                 </div>
                                 <div class="products-card__description-row">
-                                    <p class="products-card__description--text">Рис, помидор свежий, перец болгарский, авокадо, огурец, айсберг</p>
+                                    <p class="products-card__description--text">Рис, помидор свежий, перец болгарский,
+                                        авокадо, огурец, айсберг</p>
                                 </div>
                                 <div class="products-card__description-row">
                                     <div class="products-card__description-controls">
@@ -157,7 +161,8 @@
                                     <h4 class="products-card__description--name">Ролл с креветкой стандарт</h4>
                                 </div>
                                 <div class="products-card__description-row">
-                                    <p class="products-card__description--text">Рис, водоросли нори, креветки отварные, сыр сливочный, огурцы</p>
+                                    <p class="products-card__description--text">Рис, водоросли нори, креветки отварные,
+                                        сыр сливочный, огурцы</p>
                                 </div>
                                 <div class="products-card__description-row">
                                     <div class="products-card__description-controls">
@@ -172,32 +177,88 @@
                         </div>
                     </div>
                 </div>
-    </div>
-    </section>
-    </main>
+            </section>
+        </main>
 
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-box">
-                <div class="footer-logo logo">
-                    <img src="./images/logo.png" alt="logo">
+        <div class="cart-modal__overlay">
+            <div class="cart-modal">
+                <div class="cart-modal__header">
+                    <h4 class="cart-modal__header--title">Корзина</h4>
+                    <img src="./images/icons/close.svg" alt="close" class="cart-modal__header--close">
                 </div>
-                <div class="footer-nav">
-                    <ul>
-                        <li>Ресторанам</li>
-                        <li>Курьерам</li>
-                        <li>Пресс-центр</li>
-                        <li>Контакты</li>
-                    </ul>
+                <div class="cart-modal__body">
+                    <div class="cart-item">
+                        <p class="cart-item__title">
+                            Ролл угорь стандарт
+                        </p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button class="btn btn-outline">+</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">-</button>
+                        </div>
+                    </div>
+                    <div class="cart-item">
+                        <p class="cart-item__title">
+                            Ролл угорь стандарт
+                        </p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button class="btn btn-outline">+</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">-</button>
+                        </div>
+                    </div>
+                    <div class="cart-item">
+                        <p class="cart-item__title">
+                            Ролл угорь стандарт
+                        </p>
+                        <div class="cart-item__controls">
+                            <div class="cart-item__controls--price">250 ₽</div>
+                            <button class="btn btn-outline">+</button>
+                            <div class="cart-item__controls--count">1</div>
+                            <button class="btn btn-outline">-</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="footer-social">
-                    <img src="./images/socials/INST.png" alt="INST">
-                    <img src="./images/socials/FB.png" alt="FB">
-                    <img src="./images/socials/VK.png" alt="VK">
+                <div class="cart-modal__footer">
+                    <div class="cart-modal__footer--price">
+                        1250 ₽
+                    </div>
+                    <div class="cart-modal__footer--controls">
+                        <button class="btn btn-primary">
+                            Оформить заказ
+                        </button>
+                        <button class="btn btn-outline">
+                            Отмена
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
-    </footer>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-box">
+                    <a href="./index.html" class="header-logo logo">
+                        <img src="./images/logo.png" alt="logo">
+                    </a>
+                    <div class="footer-nav">
+                        <ul>
+                            <li>Ресторанам</li>
+                            <li>Курьерам</li>
+                            <li>Пресс-центр</li>
+                            <li>Контакты</li>
+                        </ul>
+                    </div>
+                    <div class="footer-social">
+                        <img src="./images/socials/INST.png" alt="INST">
+                        <img src="./images/socials/FB.png" alt="FB">
+                        <img src="./images/socials/VK.png" alt="VK">
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
