--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="./scripts/index.js" defer></script>
     <title>Delivery Food</title>
 </head>
 
@@ -25,7 +26,7 @@
                             <img src="./images/icons/user.png" alt="user">
                             Войти
                         </button>
-                        <button class="btn btn-outline">
+                        <button class="btn btn-outline" id="cart-button">
                             <img src="./images/icons/shopping-cart.png" alt="shopping-cart">
                             Корзина
                         </button>
@@ -54,7 +55,7 @@
                         </h3>
                         <input type="text" class="products-header--search" placeholder="Поиск блюд и ресторанов">
                     </div>
-                    <div class="products-wrapper">
+                    <div class="products-wrapper" id="rests-container">
                         <a href="./goods.html" class="products-card">
                             <div class="products-card__image">
                                 <img src="./images/rests/rests-1.jpg" alt="rests-1">
@@ -214,7 +215,9 @@
             <div class="cart-modal">
                 <div class="cart-modal__header">
                     <h4 class="cart-modal__header--title">Корзина</h4>
-                    <img src="./images/icons/close.svg" alt="close" class="cart-modal__header--close">
+                    <span class="cart-modal__header--close">
+                        <img src="./images/icons/close.svg" alt="close">
+                    </span>
                 </div>
                 <div class="cart-modal__body">
                     <div class="cart-item">
